[package]
name = "project-corrosion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.1"
midir = "0.9.1"
egui = "0.21.0"
clap-sys = "0.3.0"
libloading = "0.7.4"
bincode = "1.3.3"
sdl2 = "0.35.2"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
native-dialog = "0.6.3"
num = "0.4.0"